Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5431

Qpid c++ client hangs / crashes during reception failover in HA environment (mutual recursion)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.24
    • 0.25
    • C++ Clustering
    • None

    Description

      See https://bugzilla.redhat.com/show_bug.cgi?id=1039630

      C++ client using AMQP 1.0 sometimes gets into an infinite recursion during failover.

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: