QPID-5431: Qpid c++ client hangs / crashes during reception failover in HA environment (mutual recursion)

Bug in AMQP 1.0 retry code caused an infinite recursion when failing over.
The recursion was in messaging::amqp::ConnectionContext, where the following
recursive cycle could occur:
 check()->autoconnect()->tryConnect(Url)->tryConnect(Address)->wait()->check()->...

Re-organized the code to avoid the recursion, specifically avoid calling check()
in tryConnect(Address). A disconnect detected in tryConnect results in continuing
the retry rather than calling autoconnect again.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1552698 13f79535-47bb-0310-9956-ffa450edef68