cpp/examples/messaging/drain.cpp
@@ -82,8 +82,9 @@ int main(int argc, char** argv)
 {
     Options options;
     if (options.parse(argc, argv) && options.checkAddress()) {
-        Connection connection(options.url, options.connectionOptions);
+        Connection connection;
         try {
+            connection = Connection(options.url, options.connectionOptions);
             connection.open();
             Session session = connection.createSession();
             Receiver receiver = session.createReceiver(options.address);
@@ -103,7 +104,7 @@ int main(int argc, char** argv)
             connection.close();
             return 0;
         } catch(const std::exception& error) {
-            std::cout << error.what() << std::endl;
+            std::cout << "Error: " << error.what() << std::endl;
             connection.close();
         }
     }
